Replace observable/observer with propertychangelisteners